--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/x-icon" href="/images/alex.jpg" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Alex Bramall</title>
   </head>
   <body>
     <div class="container">
-      <h2 class="title">Bramall Digital</h2>
+      <h2 class="title">Alex Bramall</h2>
       <img src="images/alex.jpg" alt="" />
       <button class="CTA">Get in Touch</button>
     </div>
