button color change

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
   <body>
     <div class="container">
       <h2 class="title">Alex Bramall</h2>
+      <h3>New Website in Progress..</h3>
       <img src="images/alex.jpg" alt="" />
-      <button class="CTA">Get in Touch</button>
+
+      <a href="mailto:alex@bramalldigital.com" <button class="CTA">Get in Touch</button></a>
     </div>
   </body>
 </html>
