--- a/index.html
+++ b/index.html
@@ -7,18 +7,37 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" type="image/x-icon" href="/images/alex.jpg" />
+    <script
+      src="https://kit.fontawesome.com/ef8bb0195f.js"
+      crossorigin="anonymous"
+    ></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alex Bramall</title>
   </head>
   <body>
+    <header>
+      <img class="logo" src="images/alex.jpg" alt="Bramall Digitial Logo" />
+      <nav>
+        <ul class="nav-links">
+          <li>About</li>
+          <li>Portfolio</li>
+        </ul>
+      </nav>
+    </header>
+
     <div class="container">
       <h2 class="title">Alex Bramall</h2>
       <h3>New Website in Progress..</h3>
-      <img src="images/alex.jpg" alt="" />
-
-      <a href="mailto:alex@bramalldigital.com" <button class="CTA">Get in Touch</button></a>
+      <a class="cta" href="#"><button>Contact</button> </a>
     </div>
+
+    <footer>
+      <div class="social">
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-linkedin"></i>
+      </div>
+    </footer>
   </body>
 </html>
