--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       src="https://kit.fontawesome.com/ef8bb0195f.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="icon" type="image/x-icon" href="/images/alex.jpg" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alex Bramall</title>
