change image to PNG

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header>
-      <img class="logo" src="images/alex.jpg" alt="Bramall Digitial Logo" />
+      <img class="logo" src="images/Icon.png" alt="Bramall Digitial Logo" />
       <nav>
         <ul class="nav-links">
           <li>About</li>
@@ -26,13 +26,11 @@
         </ul>
       </nav>
     </header>
-
     <div class="container">
       <h2 class="title">Alex Bramall</h2>
       <h3>New Website in Progress..</h3>
       <a class="cta" href="#"><button>Contact</button> </a>
     </div>
-
     <footer>
       <div class="social">
         <i class="fa-brands fa-twitter"></i>
