--- a/index.html
+++ b/index.html
@@ -33,9 +33,15 @@
     </div>
     <footer>
       <div class="social">
-        <i class="fa-brands fa-twitter"></i>
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-linkedin"></i>
+        <a href="https://twitter.com/bramall_digital" target="_blank"
+          ><i class="fa-brands fa-twitter"></i
+        ></a>
+        <a href="https://www.instagram.com/bramall_digital/" target="_blank"
+          ><i class="fa-brands fa-instagram"></i
+        ></a>
+        <a href="https://www.linkedin.com/in/alexanderbramall/" target="_blank"
+          ><i class="fa-brands fa-linkedin"></i
+        ></a>
       </div>
     </footer>
   </body>
