Remove nav links on mobile

--- a/index.html
+++ b/index.html
@@ -46,10 +46,12 @@
       <nav>
         <ul class="nav-links">
           <li>About</li>
-          <li>Portfolio</li>
         </ul>
       </nav>
     </header>
+
+    <header class="nav-mobile"></header>
+
     <div class="container">
       <h2 class="title">Alex Bramall</h2>
       <h3>New Website in Progress..</h3>
